Cleaning the code
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@3196 a8e77078-a1c7-4fa5-b8fc-53c5178a176c